--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="keyword" content="muhamet wanosa, muhamet, محمد ونوسة, محمد ونوس, muhamet-wanosa, muhamed, muhamed wanosa, Muhameet wanosa">
+        <meta name="keyword" content="muhamet wanosa, muhamet, محمد ونوسة, محمد ونوس, muhamet-wanosa, muhamed, muhamed wanosa, Muhameet wanosa, Muhammet wanosa">
         <title>محمد ونوسة</title>
         <!--logo-->
         <link rel="icon" href="imges/logo.png">
